--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "learning webpack and flux with react",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,8 +18,19 @@
   },
   "homepage": "https://github.com/melvin0008/kanban#readme",
   "devDependencies": {
+    "babel-core": "^5.8.25",
+    "babel-loader": "^5.3.2",
+    "css-loader": "^0.15.5",
     "html-webpack-plugin": "^1.6.1",
     "node-libs-browser": "^0.5.3",
-    "webpack": "^1.12.2"
+    "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.12.3",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.10.1",
+    "webpack-merge": "^0.1.2"
+  },
+  "dependencies": {
+    "node-uuid": "^1.4.3",
+    "react": "^0.13.3"
   }
 }
